Resolve merge: mark csharp.cxx and Lib/csharp/wchar.i as merged; remove conflict artifacts and unify wchar helper to length-aware delegates; fix director upcall registration in C# module