@@ -19,10 +19,13 @@ public class director_string_runme {
     director_string_A c = new director_string_A("hi");
     for (int i=0; i<3; i++) {
       s = c.call_get(i);
-      if (!s.equals(new Integer(i).toString())) throw new RuntimeException("director_string_A.get(" + i + ") failed. Got:" + s);
+      if (!s.equals(Integer.valueOf(i).toString())) throw new RuntimeException("director_string_A.get(" + i + ") failed. Got:" + s);
     }
 
     director_string_B b = new director_string_B("hello");
+
+    s = b.get_first();
+    if (!s.equals("director_string_B.get_first")) throw new RuntimeException("get_first() failed");
 
     s = b.call_get_first();
     if (!s.equals("director_string_B.get_first")) throw new RuntimeException("call_get_first() failed");
@@ -39,7 +42,7 @@ class director_string_B extends A {
     public String get_first() {
       return "director_string_B.get_first";
     }
-  
+
     public String get(int n) {
       return "director_string_B.get: " + super.get(n);
     }
@@ -50,7 +53,6 @@ class director_string_A extends A {
       super(first);
     }
     public String get(int n) {
-      return new Integer(n).toString();
+      return Integer.valueOf(n).toString();
     }
 }
-
